jdk25: Collectors.toList() → Stream.toList(); fix isolated test breakage
Mechanical codemod of the legacy stream-collect pattern across the
backend. .collect(Collectors.toList()) is replaced with .toList()
(Java 16+) in 34 files. Net: 130 lines removed, no behaviour change
for any caller that treats the result as read-only.

Caveat baked in: Stream.toList() returns an immutable list, whereas
the legacy Collectors.toList() returned a mutable ArrayList. One
caller (SubscriptionService.detectSubscriptions, line ~388) does
addAll() on the result to merge a second pattern-based pass into the
candidate set. Switched that single stream to
.collect(Collectors.toCollection(ArrayList::new)) with an inline note.

Also closes two pre-existing test-isolation bugs that surface when
the affected class is run with `mvn test -Dtest=…`:

 - TransactionActionControllerIntegrationTest:
     - All 7 tests errored out with ResourceNotFoundException because
       the suite never seeded the DDB tables when run alone. Added a
       TableInitializer.initializeTables() call to @BeforeEach.
     - Two action tests also deserialised the wrapped {status,data,…}
       envelope directly into TransactionActionTable, producing an
       all-null instance and a URL with null actionId. Added a
       parseActionEnvelope() helper that pulls `data` out first.

 - PlaidCategoryIntegrationTest: same DDB seed gap when run alone.
   Added the same TableInitializer call.

Verified: 5853 / 0 / 0 / 22-skipped in 9m48s on the full suite; both
above classes pass in isolation (7 + 2 = 9/9).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>